--- a/04/factorial.html
+++ b/04/factorial.html
@@ -8,6 +8,22 @@
 	<link rel="stylesheet" href="css/factorial.css">
 </head>
 <body>
+	<script>
+		var i = 0
+		do{
+			document.write('반복 조건이 true이면 반복합니다. <br>');
+			i+=1;
+		}while(i<10)
+
+		var n = prompt("숫자 입력",10);
+		var nFact = 1;
+		var i =2;
+		while (i <= n){
+			nFact *=i;
+			i++;
+		}
+		document.write(n+"!= "+nFact);
+	</script>
 
 </body>
 </html>
