--- a/04/for.html
+++ b/04/for.html
@@ -8,6 +8,37 @@
 	<link rel="stylesheet" href="css/for.css">
 </head>
 <body>
+	<script>
+		for (var i = 0; i < 30; i++){
+			document.write('*');
+		}
+		document.write("<br>");
+		for (var i = 0; i < 30; i++){
+			document.write('*');
+		}
+		document.write("<br>");
+		for (var i = 0; i < 30; i++){
+			document.write('*');
+		}
+		document.write("<br>");
+		for (var i = 0; i < 30; i++){
+			document.write('*');
+		}
+		document.write("<br>");
+		for (var i = 0; i < 30; i++){
+			document.write('*');
+		}
+		document.write("<br>");
+		document.write("<br>");
+		document.write("<br>");
+		for (var x = 0; x <5; x ++){
+			
+			for (var z = 0; z<30; z++){
+				document.write("*");
+			}
+			document.write("<br>");
 
+		}
+	</script>
 </body>
 </html>
