--- a/04/multi3.html
+++ b/04/multi3.html
@@ -9,5 +9,21 @@
 </head>
 <body>
 	<div id="result"></div>
+	<script>
+		var userNumber = prompt("숫자를 입력하세요");
+		var displayArea = document.querySelector('#result');
+		if(userNumber != null){
+			if (userNumber % 3 ==0){
+				displayArea.innerHTML = userNumber + "은 3의 배수입니다."
+			}
+			else{
+				displayArea.innerHTML = userNumber + "은 3의 배수가 아닙니다."
+			}
+
+		}
+		else{
+			
+		}
+	</script>
 </body>
 </html>
