--- a/04/switch.html
+++ b/04/switch.html
@@ -11,6 +11,16 @@
 	<script>
 		var session = prompt("관심 세션을 선택해 주세요. 1-마케팅, 2-개발, 3-디자인", "1");
 		
+		switch(session){
+			case "1" : document.write("<p>마케팅 세션은 <string>201호</strong>에서 진행됩니다.</p>");
+				break;
+			case "2" : document.write("<p>개발 세션은 <string>203호</strong>에서 진행됩니다.</p>");
+				break;
+			case "3" : document.write("<p>디자인 세션은 <string>205호</strong>에서 진행됩니다.</p>");
+				break;
+		default:alert("잘못입력했습니다.");
+		}
+	
 	</script>
 </body>
 </html>
