--- a/09/order.html
+++ b/09/order.html
@@ -52,6 +52,7 @@
 			</fieldset>
 			<button type="submit" class="order">결제하기</button>
 		</form>		
+		<script src="js/order.js"></script>
 	</div>
 </body>
 </html>
